<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:minHeight="80dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/english_name_label_hint"
        style="@style/Hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/english_name_hint"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/english_name_label"
        style="@style/Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/english_name_label_hint"
        app:layout_constraintTop_toBottomOf="@+id/english_name_label_hint"
        tools:text="Ukraine" />

    <TextView
        android:id="@+id/local_name_label_hint"
        style="@style/Hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/local_name_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/english_name_label_hint"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/local_name_label"
        style="@style/Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/local_name_label_hint"
        app:layout_constraintTop_toBottomOf="@+id/local_name_label_hint"
        tools:text="Украина" />

    <TextView
        android:id="@+id/population_label_hint"
        style="@style/Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/population_hint"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/local_name_label_hint"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/population_label"
        style="@style/Label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/population_label_hint"
        app:layout_constraintTop_toBottomOf="@+id/population_label_hint"
        tools:text="42 M" />

    <TextView
        android:id="@+id/flag_image_hint"
        style="@style/Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flag_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/population_label_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82" />

</androidx.constraintlayout.widget.ConstraintLayout>